<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/row_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="@dimen/margin_12"
    android:layout_marginEnd="@dimen/margin_12">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_24"
        android:background="@color/row_bkgd">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_vert_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.25"
            android:orientation="vertical"/>

        <TextView
            android:id="@+id/currency_symbol"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gl_vert_25"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/inmar_orange"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/text_24"
            android:textStyle="bold"
            android:textColor="@color/text_white"
            android:gravity="center"
            android:paddingTop="@dimen/margin_12"
            android:paddingBottom="@dimen/margin_12"
            android:text="BTC"/>

        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/gl_vert_25"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_grey"
            android:textStyle="bold"
            android:textSize="@dimen/text_18"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/name_title"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text_18"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/gl_vert_25"
            app:layout_constraintTop_toBottomOf="@id/name_title"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_grey"
            android:textStyle="bold"
            android:textSize="@dimen/text_14"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/price_title"
            app:layout_constraintTop_toBottomOf="@id/name_value"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text_14"
            android:text="$8226.22342104"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/market_cap_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/gl_vert_25"
            app:layout_constraintTop_toBottomOf="@id/price_title"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_grey"
            android:textStyle="bold"
            android:textSize="@dimen/text_14"
            android:text="@string/market_cap"/>

        <TextView
            android:id="@+id/market_cap_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/market_cap_title"
            app:layout_constraintTop_toBottomOf="@id/price_value"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text_14"
            android:text="$147919425134.2597"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/volume_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/gl_vert_25"
            app:layout_constraintTop_toBottomOf="@id/market_cap_title"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_grey"
            android:textStyle="bold"
            android:textSize="@dimen/text_14"
            android:text="@string/volume"/>

        <TextView
            android:id="@+id/volume_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/volume_title"
            app:layout_constraintTop_toBottomOf="@id/market_cap_value"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text_14"
            android:text="$15491365372.5503"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginBottom="@dimen/margin_8"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>