<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_24"
    android:background="#00000000">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/details_bkgd">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_12">

            <ImageView
                android:id="@+id/currency_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="64dp"
                android:minHeight="64dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/title_scrollview_parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:src="@drawable/inmar_placeholder"
                android:contentDescription="@string/crypto_currency_logo"/>

            <RelativeLayout
                android:id="@+id/title_scrollview_parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/currency_logo"
                app:layout_constraintBottom_toBottomOf="@id/currency_logo"
                app:layout_constraintStart_toEndOf="@id/currency_logo"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/margin_12">

                <HorizontalScrollView
                    android:id="@+id/title_scrollview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:scrollbars="none"
                    tools:ignore="UselessParent">
                    <TextView
                        android:id="@+id/currency_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_24"
                        android:textColor="@color/inmar_blue_dark"/>
                </HorizontalScrollView>

            </RelativeLayout>

            <View
                android:id="@+id/horz_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/inmar_orange"
                app:layout_constraintTop_toBottomOf="@id/currency_logo"
                android:layout_marginTop="@dimen/margin_8"/>
            
            <TextView
                android:id="@+id/website_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/horz_divider"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_8"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:textSize="@dimen/text_18"
                android:textColor="@color/text_grey"
                android:text="@string/website"
                android:visibility="gone"/>

            <HorizontalScrollView
                android:id="@+id/website_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/website_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_24"
                android:visibility="gone">

                <TextView
                    android:id="@+id/website_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textSize="@dimen/text_16"
                    android:textColor="@color/inmar_blue"
                    android:maxLines="1"
                    android:clickable="true"
                    android:focusable="true"/>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/tech_docs_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/website_scrollview"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_12"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:textSize="@dimen/text_18"
                android:textColor="@color/text_grey"
                android:text="@string/tech_docs"
                android:visibility="gone"/>

            <HorizontalScrollView
                android:id="@+id/tech_docs_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tech_docs_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_24"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tech_docs_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textSize="@dimen/text_16"
                    android:textColor="@color/inmar_blue"
                    android:maxLines="1"
                    android:clickable="true"
                    android:focusable="true"/>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tech_docs_scrollview"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_12"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:textSize="@dimen/text_18"
                android:textColor="@color/text_grey"
                android:text="@string/description"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/description_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/description_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/margin_24"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/text_16"
                android:textColor="@color/inmar_blue"
                android:visibility="gone"/>

            <Button
                android:id="@+id/metadata_retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/horz_divider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/margin_24"
                android:paddingTop="@dimen/margin_12"
                android:paddingBottom="@dimen/margin_12"
                android:paddingStart="@dimen/margin_24"
                android:paddingEnd="@dimen/margin_24"
                android:text="@string/retry"
                android:textColor="@color/text_grey"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/metadata_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/horz_divider"
                android:layout_margin="@dimen/margin_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:indeterminate="true"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>